--- a/src/App.css
+++ b/src/App.css
@@ -87,16 +87,23 @@ nav {
   align-items: center;
   justify-content: center;
   gap: 20px;
+  padding: 0px 20px;
+  position: fixed;
+  bottom: 0;
 }
 
 #add,
 #submit {
   width: 50px;
   height: 50px;
-  border-radius: 50%;
+  border-radius: 50px;
   border: 2px solid rgba(255, 255, 255, 0.297);
-  background-color: black;
+  background-color: rgb(11,16,17);
   color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
 
 #add svg {
@@ -109,6 +116,93 @@ nav {
   height: 25px;
 }
 
+#genImg {
+  color: rgb(7, 236, 240)
+}
+
+form input {
+  max-width: 60%;
+  width: calc(100% - 120px);
+  height: 60px;
+  background-color: rgb(11,16,17);
+ border: 2px solid rgba(255, 255, 255, 0.297);
+  border-radius: 30px;
+  outline: none;
+  padding: 10px 20px;
+  color: white;
+  font-size: 19px;  
+}
+
+
+/* CHAT SECTION */
+
+.chat-page {
+  width: 100%;
+  height: 70%;
+  display: flex;
+  align-items: start;
+  justify-content: start;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px;
+}
+
+.user, .ai {
+  width: 90%;
+  padding: 20px 30px;
+  color: white;
+  background-color: rgb(11,16,17);
+  border: 2px solid rgba(255, 255, 255, 0.297);
+  border-radius: 20px;
+  font-size: 20px;
+}
+
+.pop-up {
+  width: 200px;
+  height: 120px;
+  background-color: rgb(11,16,17);
+  border: 2px solid rgba(255, 255, 255, 0.297);
+  position: absolute;
+  bottom: 120px;
+  left: 15%;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 20px;
+  padding: 5px;
+}
+
+.select-up, .select-gen {
+  color: white;
+  width: 100%;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 10px;
+  font-size: 15px;
+  border-radius: 20px;
+  cursor: pointer;
+
+}
+
+.select-up:hover, .select-gen:hover {
+  background-color: rgba(240, 248, 255, 0.1);
+}
+
+.select-up svg {
+  color: rgb(7, 240, 11);
+  height: 25px;
+  width: 25px;
+}
+
+.select-gen svg {
+  color: rgb(7, 236, 240);
+  height: 25px;
+  width: 25px;
+}
 
 @media (max-width: 500px) {
   #tag {
